src/components/shared/ExerciseTypeBuilder/ExerciseTypeBuilder.scss
@import '../../../styles/variables.scss';

.ExerciseTypeBuilder {
  display: block;
  width: 100%;
  padding: 25px 10%;
  min-height: 25vh;
  h2 {
    font-size: 2.5rem;
  }
  .exercise-builder-header {
    padding: 35px 0 20px;
  }
  .radio-btn-container {
    margin-bottom: 1.2rem;
  }
  .exercise-description {
    margin-top: 1.2rem;
  }
}

// CARD COLORS

@mixin exercise-colors($bg, $text) {
  background-color: $bg;
  h2, i, p, .form-check {
    color: $text;
  }
}

.exerciseType1 {
  @include exercise-colors($brand-green, $brand-gold);
}
.exerciseType2 {
  @include exercise-colors($brand-gold, $brand-black);
}
.exerciseType3 {
  @include exercise-colors($brand-blue, $brand-pink);
}
.exerciseType4 {
  @include exercise-colors($brand-pink, $brand-blue);
}

